Fix bottom align of project scope field

--- a/src/components/ProjectScopeField/style.scss
+++ b/src/components/ProjectScopeField/style.scss
@@ -3,7 +3,7 @@
 .project-scope-field {
 
   &__option {
-    display: inline-block;
+    display: flex;
     width: 50%;
 
     &-box {
